--- a/apps/voronoi-density/Makefile
+++ b/apps/voronoi-density/Makefile
@@ -2,4 +2,4 @@ CXX=g++
 VORO_INSTALL=/home/shaomeng/Build/voro++-0.4.6/install
 
 voro2density: voro2density.cpp
-	$(CXX) -O2 -I$(VORO_INSTALL)/include -L$(VORO_INSTALL)/lib -o bin/voro2density voro2density.cpp -lvoro++
+	$(CXX) -std=c++11 -O3 -I$(VORO_INSTALL)/include -L$(VORO_INSTALL)/lib -o bin/voro2density voro2density.cpp -lvoro++ -lm
