back up old files

--- a/apps/voronoi-density/Makefile
+++ b/apps/voronoi-density/Makefile
@@ -1,5 +1,7 @@
 CXX=g++
 VORO_INSTALL=/home/shaomeng/Build/voro++-0.4.6/install
 
-voro2density: voro2density.cpp
-	$(CXX) -std=c++11 -O3 -I$(VORO_INSTALL)/include -L$(VORO_INSTALL)/lib -o bin/voro2density voro2density.cpp -lvoro++ -lm
+SRC=voro2densityV2.cpp
+
+voro2density: $(SRC)
+	$(CXX) -std=c++11 -O3 -march=native -I$(VORO_INSTALL)/include -L$(VORO_INSTALL)/lib -o bin/voro2density $(SRC) -lvoro++ -lm
