--- a/apps/voronoi-density/Makefile
+++ b/apps/voronoi-density/Makefile
@@ -1,8 +1,11 @@
-#CXX=g++
-CXX=pgc++
-CC=pgcc
-GCCFLAG=-march=native -O3
-PGIFLAG=-tp=haswell -O3
+CXX=clang++
+CC=clang
+
+GCCOPTIM=-march=haswell -O3
+PGIOPTIM=-tp=haswell -O3
+FLAG=$(GCCOPTIM)
+
+BINDIR=bin
 
 VORO_INSTALL=/home/shaomeng/Build/voro++-0.4.6/install
 
@@ -10,12 +13,13 @@ SRCV2=voro2densityV2.cpp
 SRCV3=voro2densityV3.cpp
 
 
-voro2densityv3: $(SRCV3)
-	$(CXX) -std=c++11 $(PGIFLAG) -c -o pgi_bin/voro2density.o $(SRCV3) 
-	$(CXX) -o pgi_bin/voro2density pgi_bin/voro2density.o pgi_bin/kdtree.o -lm -lpthread
+voro2density: kdtree.o $(SRCV3)
+	$(CXX) -std=c++11 $(FLAG) -c -o $(BINDIR)/voro2density.o $(SRCV3) 
+	$(CXX) -o $(BINDIR)/voro2density $(BINDIR)/voro2density.o $(BINDIR)/kdtree.o -lm -lpthread
+
+kdtree.o: kdtree/kdtree.h kdtree/kdtree.c
+	$(CC) -DUSE_LIST_NODE_ALLOCATOR -c $(FLAG) -o $(BINDIR)/kdtree.o kdtree/kdtree.c
 
 voro2densityv2: $(SRCV3)
 	$(CXX) -std=c++11 $(GCCFLAG) -I$(VORO_INSTALL)/include -L$(VORO_INSTALL)/lib -o bin/voro2density $(SRCV2) -lvoro++ -lm
 
-kdtree: kdtree/kdtree.h kdtree/kdtree.c
-	$(CC) -DUSE_LIST_NODE_ALLOCATOR -c -O3 -tp=haswell -o pgi_bin/kdtree.o kdtree/kdtree.c -lpthread
