tweak kdtree to significantly increase parallel speed

--- a/apps/voronoi-density/Makefile
+++ b/apps/voronoi-density/Makefile
@@ -1,14 +1,16 @@
-CXX=pgc++
-CC=pgcc
+CXX=icpc
+CC=icc
 
 GCCOPTIM=-march=haswell -O3
 PGIOPTIM=-tp=haswell-64 -O3 
+INTOPTIM=-march=haswell -O3 
 GCCOMP=-fopenmp
 PGIOMP=-mp
-FLAG=$(PGIOPTIM)
-OMP=$(PGIOMP)
+INTOMP=-qopenmp
+FLAG=$(INTOPTIM)
+OMP=$(INTOMP)
 
-BINDIR=pgi_bin
+BINDIR=intel_bin
 
 VORO_INSTALL=/home/shaomeng/Build/voro++-0.4.6/install
 
@@ -17,11 +19,11 @@ SRCV3=voro2densityV3.cpp
 
 
 voro2density: kdtree.o $(SRCV3)
-	$(CXX) -std=c++11 $(FLAG) -c -o $(BINDIR)/voro2density.o $(SRCV3) -lpthread 
-	$(CXX) -o $(BINDIR)/voro2density $(BINDIR)/voro2density.o $(BINDIR)/kdtree.o -lm -lpthread 
+	$(CXX) -std=c++11 $(FLAG) -c -o $(BINDIR)/voro2density.o $(SRCV3) $(OMP)
+	$(CXX) -o $(BINDIR)/voro2density $(BINDIR)/voro2density.o $(BINDIR)/kdtree.o -lm $(OMP)
 
 kdtree.o: kdtree/kdtree.h kdtree/kdtree.c
-	$(CC) -DUSE_LIST_NODE_ALLOCATOR -c $(FLAG) -o $(BINDIR)/kdtree.o kdtree/kdtree.c -lpthread
+	$(CC) -DNO_PTHREADS -c $(FLAG) -o $(BINDIR)/kdtree.o kdtree/kdtree.c
 
 voro2densityv2: $(SRCV3)
 	$(CXX) -std=c++11 $(GCCFLAG) -I$(VORO_INSTALL)/include -L$(VORO_INSTALL)/lib -o bin/voro2density $(SRCV2) -lvoro++ -lm
