--- a/apps/voronoi-density/Makefile
+++ b/apps/voronoi-density/Makefile
@@ -17,6 +17,7 @@ VORO_INSTALL=/home/shaomeng/Build/voro++-0.4.6/install
 
 SRCV2=voro2densityV2.cpp
 SRCV3=voro2densityV3.cpp
+SRCV4=voro2densityV4.cpp
 
 
 voro2density: kdtree.o $(SRCV3)
@@ -29,3 +30,5 @@ kdtree.o: kdtree/kdtree.h kdtree/kdtree.c
 voro2densityv2: $(SRCV3)
 	$(CXX) -std=c++11 $(GCCFLAG) -I$(VORO_INSTALL)/include -L$(VORO_INSTALL)/lib -o bin/voro2density $(SRCV2) -lvoro++ -lm
 
+v4: $(SRCV4)
+	$(CXX) -std=c++11 $(FLAG) -o $(BINDIR)/v4 $(SRCV4) 
